update all dscensor files to use path queries and be compatible with lis-autocontent in the same environment. #1120
